tests/build/cases/widget_new/malformed_property_path3.stderr
error: expected `;`
 --> cases/widget_new/malformed_property_path3.rs:6:24
  |
6 |         zero_ui::layout:margin = 0;
  |                        ^

error[E0425]: cannot find function `layout` in module `zero_ui::layout`
 --> cases/widget_new/malformed_property_path3.rs:6:18
  |
6 |         zero_ui::layout:margin = 0;
  |                  ^^^^^^ help: a unit struct with a similar name exists: `LAYOUT`
  |
 ::: $WORKSPACE/zero-ui-layout/src/context.rs
  |
  | pub struct LAYOUT;
  | ----------------- similarly named unit struct `LAYOUT` defined here

error[E0425]: cannot find value `layout` in this scope
 --> cases/widget_new/malformed_property_path3.rs:6:18
  |
6 |         zero_ui::layout:margin = 0;
  |                  ^^^^^^ not found in this scope

error[E0599]: no method named `margin` found for mutable reference `&mut Wgt` in the current scope
 --> cases/widget_new/malformed_property_path3.rs:6:25
  |
6 |         zero_ui::layout:margin = 0;
  |                         ^^^^^^ method not found in `&mut Wgt`
  |
  = help: items from traits can only be used if the trait is in scope
help: the following traits are implemented but not in scope; perhaps add a `use` for one of them:
  |
1 + use zero_ui::layout::margin;
  |
1 + use zero_ui::rule_line::hr::margin;
  |
1 + use zero_ui::rule_line::vr::margin;
  |
